# Learning

./: .env  main.py  pyproject.toml
